--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@astrojs/mdx": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
     "astro-code": "^0.1.0",
-    "pagefind": "^1.0.0",
+    "pagefind": "^1.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.0",
