chore: add lockfile and packageManager

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@9.15.4",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -12,7 +13,7 @@
     "postinstall": ""
   },
   "dependencies": {
-    "astro": "^3.5.0",
+    "astro": "^4.0.0",
     "@astrojs/mdx": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
     "astro-code": "^0.1.0",
